--- a/SpringSecurity/security/src/main/resources/application.yaml
+++ b/SpringSecurity/security/src/main/resources/application.yaml
@@ -13,3 +13,7 @@ spring:
     hibernate:
       ddl-auto: create-drop
     open-in-view: false
+    app:
+      default:
+        admin:
+          password: master
