--- a/Projects/mobilele/src/main/resources/application.yml
+++ b/Projects/mobilele/src/main/resources/application.yml
@@ -3,11 +3,11 @@ spring:
         driverClassName: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://localhost:3306/mobilele?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
         username: root
-        password: master
+        password: ${MYSQL_PASS:master}
     jpa:
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         hibernate:
-            ddl-auto: create-drop
+            ddl-auto: update
         defer-datasource-initialization: true
     mvc:
         hiddenmethod:
@@ -16,4 +16,6 @@ spring:
 
     sql:
         init:
-            mode: always
+            mode: never
+
+default.admin.pass: ${DEFAULT_ADMIN_PASS}
